test/corpus/basic.txt
==================
Comments
==================

; This is a comment
// This is also a comment
/* Multi-line
   comment */

---

(source_file
  (comment)
  (comment)
  (comment))

==================
Directives
==================

$TTL 3600
$ORIGIN example.com.

---

(source_file
  (directive
    (ttl_directive
      (time_value)))
  (directive
    (origin_directive
      (domain_name))))

==================
A Records
==================

@ IN A 192.168.1.1
www 3600 IN A 192.168.1.2
mail A 192.168.1.3

---

(source_file
  (resource_record
    name: (domain_name)
    class: (record_class)
    type: (record_type)
    data: (record_data
      (generic_data
        (ipv4_address))))
  (resource_record
    name: (domain_name)
    ttl: (time_value)
    class: (record_class)
    type: (record_type)
    data: (record_data
      (generic_data
        (ipv4_address))))
  (resource_record
    name: (domain_name)
    type: (record_type)
    data: (record_data
      (generic_data
        (ipv4_address)))))

==================
SOA Record
==================

@ IN SOA ns1.example.com. admin.example.com. (
  2024010101 ; serial
  3600       ; refresh
  1800       ; retry
  604800     ; expire
  86400      ; minimum
)

---

(source_file
  (resource_record
    name: (domain_name)
    class: (record_class)
    type: (record_type)
    data: (record_data
      (soa_data
        (domain_name)
        (domain_name)
        (number)
        (time_value)
        (time_value)
        (time_value)
        (time_value))))
  (comment)
  (comment)
  (comment)
  (comment)
  (comment))
